# airlang_rs

./: .gitmodules  Cargo.toml  LICENSE  README.md  README.zh-Hans.md  rustfmt.toml
air/: Cargo.toml
air/src/: lib.rs
air/tests/main/: main.rs
ext/: Cargo.toml  README.md
ext/src/: cfg.rs  cfg2.rs  func.rs  lib.rs  prelude.rs  problem.rs  pub1.rs  solve.rs  solver.rs  test.rs  val.rs
ext/src/cfg/: lib.rs  prelude.rs
ext/src/cfg/lib/: build.rs  file.rs  io.rs  process.rs
ext/src/cfg/prelude/: build.rs  file.rs  io.rs  process.rs
ext/src/prelude/: build.rs  file.rs  io.rs  process.rs
lib/: Cargo.toml  README.md
lib/benches/: bench_main.rs  eval.rs  generate.air  interpret.air  interpret.rs  parse.air  parse.rs  semantics.rs  syntax.rs
lib/benches/eval/: mod.rs  src.air
lib/benches/interpret/: mod.rs
lib/benches/main/: generate.air  interpret.air  main.rs  parse.air  semantics.rs  syntax.rs
lib/benches/parse/: mod.rs  src.air
lib/src/: abstract1.rs  adapt.rs  advisor.rs  annotate.rs  annotation.rs  answer.rs  arbitrary.rs  ask.rs  bit.rs  bool.rs  byte.rs  bytes.rs  cache.rs  call.rs  case.rs  cfg.rs  cfg2.rs  change.rs  class.rs  comment.rs  core.rs  ctx.rs  ctx_access.rs  either.rs  equiv.rs  eval.rs  eval_mode.rs  extension.rs  float.rs  func.rs  generate.rs  grammar.rs  int.rs  inverse.rs  io_mode.rs  lib.rs  list.rs  logic.rs  map.rs  mode.rs  (+28 more)
lib/src/air/: first.air  last.air
lib/src/air/lib/: cell.air  decimal.air  key.air  language.air
lib/src/cfg/: adapter.rs  error.rs  exception.rs  lib.rs  mode.rs  prelude.rs  repr.rs  utils.rs
lib/src/cfg/adapter/: call.rs  comp.rs  core.rs  list.rs  map.rs  pair.rs  prim.rs  symbol.rs
lib/src/cfg/lib/: adapter.rs  bit.rs  byte.rs  call.rs  cell.rs  cfg.rs  ctrl.rs  ctx.rs  decimal.rs  error.rs  func.rs  int.rs  key.rs  lang.rs  link.rs  list.rs  map.rs  memo.rs  meta.rs  mode.rs  number.rs  pair.rs  resource.rs  symbol.rs  syntax.rs  task.rs  text.rs  unit.rs  value.rs
lib/src/cfg/mode/: call.rs  comp.rs  func.rs  map.rs  pair.rs  prim.rs
lib/src/cfg/prelude/: bit.rs  cfg.rs  ctrl.rs  ctx.rs  func.rs  int.rs  link.rs  meta.rs  mode.rs  solve.rs  syntax.rs  task.rs  unit.rs
lib/src/cfg/repr/: func.rs
lib/src/ctx/: const1.rs  constant.rs  default.rs  free.rs  main.rs  map.rs  mut1.rs  mutable.rs  pattern.rs  ref1.rs  repr.rs
lib/src/ctx_access/: constant.rs  free.rs  mutable.rs
lib/src/eval/: input.rs
lib/src/eval_mode/: eager.rs  id.rs  lazy.rs  less.rs  more.rs  value.rs
lib/src/func/: cell.rs  comp.rs  const1.rs  const_cell_comp.rs  const_cell_prim.rs  const_static_comp.rs  const_static_prim.rs  ctx_aware_comp.rs  free.rs  free_cell_comp.rs  free_cell_prim.rs  free_static_comp.rs  free_static_prim.rs  func_mode.rs  mode.rs  mut1.rs  mut_cell_comp.rs  mut_cell_prim.rs  mut_static_comp.rs  mut_static_prim.rs  prim.rs  repr.rs  static1.rs
lib/src/grammar/: mod.rs  parse.rs  stringify.rs  test.rs
lib/src/grammar/parse/: deep.rs  infix.rs  lexer.rs  mod.rs  postfix.rs  prefix.rs  repr.rs
lib/src/grammar/repr/: mod.rs
lib/src/grammar/stringify/: mod.rs
lib/src/grammar/test/: booleans.rs  bytes.air  bytes.rs  calls.rs  comments.air  comments.rs  floats.rs  infixes.rs  ints.rs  letters.rs  lists.air  lists.rs  maps.air  maps.rs  mod.rs  pairs.rs  postfixes.air  postfixes.rs  prefixes.air  prefixes.rs  strings.rs  symbols.air  symbols.rs  top.air  top.rs  units.rs  (+1 more)
lib/src/mode/: abstract1.rs  adapt.rs  ask.rs  basic.rs  call.rs  change.rs  class.rs  comment.rs  comp.rs  composite.rs  either.rs  equiv.rs  eval.rs  form.rs  generate.rs  id.rs  inverse.rs  list.rs  map.rs  optimize.rs  pair.rs  prim.rs  primitive.rs  recursive.rs  reify.rs  repr.rs  solve.rs  symbol.rs  united.rs
lib/src/parser/: mod.rs
lib/src/prelude/: abstract1.rs  adapt.rs  annotate.rs  annotation.rs  answer.rs  ask.rs  assert.rs  bit.rs  bool.rs  byte.rs  bytes.rs  call.rs  case.rs  change.rs  class.rs  comment.rs  ctrl.rs  ctx.rs  either.rs  equiv.rs  eval.rs  extension.rs  float.rs  func.rs  generate.rs  int.rs  inverse.rs  link.rs  list.rs  logic.rs  map.rs  meta.rs  mode.rs  number.rs  optimize.rs  pair.rs  prop.rs  reify.rs  reverse.rs  setup.rs  (+10 more)
lib/src/semantics/: cfg.rs  core.rs  ctx.rs  ctx_access.rs  eval.rs  eval_mode.rs  extension.rs  func.rs  input_mode.rs  io_mode.rs  logic.rs  memo.rs  mode.rs  nondeterministic.rs  prelude.rs  problem.rs  solve.rs  solver.rs  test.rs  utils.rs  val.rs
lib/src/syntax/: annotated.rs  error.rs  generator.rs  parser.rs  pub1.rs  repr.rs  reserve.rs  test.rs
lib/src/test/: abstract.air  adapt.air  adapter.air  annotate.air  answer.air  ask.air  assert.air  bit.air  bool.air  byte.air  call.air  case.air  cell.air  cfg.air  change.air  class.air  comment.air  config.air  context.air  control.air  core.air  ctrl.air  ctx.air  decimal.air  doc.air  either.air  equiv.air  error.air  eval.air  ext.rs  extension.air  func.air  function.air  generate.air  int.air  integer.air  inverse.air  key.air  lang.air  language.air  (+21 more)
lib/src/trait_/: derive.rs  dyn_safe.rs
lib/src/traits/: dyn_safe.rs  option.rs
lib/src/transform/: eval.rs  form.rs  id.rs  lazy.rs
lib/src/transformer/: input.rs  output.rs
lib/src/type1/: arbitrary.rs
lib/src/type_/: bit.rs  byte.rs  call.rs  cell.rs  change.rs  decimal.rs  either.rs  int.rs  key.rs  link.rs  list.rs  map.rs  number.rs  pair.rs  ref_.rs  symbol.rs  task.rs  text.rs  unit.rs  wrap.rs
lib/src/types/: apply.rs  bool.rs  bytes.rs  call.rs  either.rs  extend.rs  float.rs  int.rs  inverse.rs  letter.rs  list.rs  map.rs  pair.rs  ref1.rs  refer.rs  reverse.rs  string.rs  symbol.rs  unit.rs  wrap.rs
lib/src/utils/: conversion.rs  guard.rs  val.rs
lib/src/val/: abstract1.rs  adapt.rs  annotate.rs  answer.rs  ask.rs  assert.rs  byte.rs  bytes.rs  call.rs  case.rs  change.rs  class.rs  comment.rs  ctx.rs  either.rs  equiv.rs  float.rs  func.rs  generate.rs  int.rs  inverse.rs  list.rs  map.rs  mod.rs  number.rs  optimize.rs  pair.rs  prop.rs  reify.rs  reverse.rs  solve.rs  string.rs  text.rs
lib/tests/main/: benches.rs
(+453 files in other folders)
