[workspace]
resolver = "3"

members = [
    "lib",
    "ext",
    "bin",
    "air"
]

[workspace.lints.rust]
bad_style = "warn"
improper_ctypes = "warn"
non_shorthand_field_patterns = "warn"
no_mangle_generic_items = "warn"
overflowing_literals = "warn"
path_statements = "warn"
patterns_in_fns_without_body = "warn"
private_interfaces = "warn"
private_bounds = "warn"
unconditional_recursion = "deny"
while_true = "deny"
dead_code = "warn"
unused =  { level = "warn", priority = -1 }
unused_allocation = "warn"
unused_comparisons = "warn"
unused_parens = "warn"

[workspace.lints.clippy]
needless_return = "warn"
semicolon_if_nothing_returned = "warn"
redundant_clone = "warn"
redundant_else = "warn"
alloc_instead_of_core = "warn"
branches_sharing_code = "warn"
clone_on_ref_ptr = "warn"
cognitive_complexity = "warn"
collection_is_never_read = "warn"
dbg_macro = "warn"
decimal_literal_representation = "warn"
empty_line_after_doc_comments = "warn"
empty_line_after_outer_attr = "warn"
implicit_clone = "warn"
inefficient_to_string = "warn"
manual_let_else = "warn"
match_wildcard_for_single_variants = "warn"
mod_module_files = "warn"
mut_mut = "warn"
needless_bitwise_bool = "warn"
needless_continue = "warn"
nonstandard_macro_braces = "warn"
range_minus_one = "warn"
range_plus_one = "warn"
redundant_closure_for_method_calls = "warn"
ref_binding_to_reference = "warn"
semicolon_inside_block = "warn"
single_match_else = "warn"
#tests_outside_test_module = "warn"
todo = "warn"
#trait_duplication_in_bounds = "warn"
type_repetition_in_bounds = "warn"
#undocumented_unsafe_blocks = "warn"

[profile.release]
lto = true
codegen-units = 1
