[workspace]
resolver = "3"

members = [
    "lib",
    "ext",
    "bin",
    "air"
]

[workspace.lints.rust]

non_ascii_idents = "deny"

unstable_features = "deny"

# lint groups
bad_style = { level = "warn", priority = -1 }
unused = { level = "warn", priority = -1 }

# terminate
unconditional_recursion = "warn"
while_true = "warn"

# lifetime
unused_lifetimes = "warn"
redundant_lifetimes = "warn"

# import
redundant_imports = "warn"
# request feature
# unqualified_local_imports = "warn"
unused_qualifications = "warn"

ambiguous_negative_literals = "warn"

unit_bindings = "warn"

[workspace.lints.clippy]

# lint groups
perf = { level = "warn", priority = -1 }

# buggy
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"
collection_is_never_read = "warn"
implicit_clone = "warn"
clone_on_ref_ptr = "warn"
match_wildcard_for_single_variants = "warn"
mut_mut = "warn"
needless_bitwise_bool = "warn"
ref_binding_to_reference = "warn"
unused_result_ok = "warn"
unused_peekable = "warn"
unnecessary_struct_initialization = "warn"
try_err = "warn"
string_to_string = "warn"
significant_drop_in_scrutinee = "warn"
significant_drop_tightening = "warn"
pub_underscore_fields = "warn"
items_after_statements = "warn"
infinite_loop = "warn"
error_impl_error = "warn"
debug_assert_with_mut_call = "warn"

# style
semicolon_if_nothing_returned = "warn"
redundant_else = "warn"
needless_continue = "warn"
branches_sharing_code = "warn"
useless_let_if_seq = "warn"
manual_let_else = "warn"
return_and_then = "warn"
map_unwrap_or = "warn"
manual_is_variant_and = "warn"
single_match_else = "warn"
unnested_or_patterns = "warn"
unneeded_field_pattern = "warn"
rest_pat_in_fully_bound_structs = "warn"
trait_duplication_in_bounds = "warn"
type_repetition_in_bounds = "warn"
redundant_closure_for_method_calls = "warn"
semicolon_inside_block = "warn"
used_underscore_items = "warn"
used_underscore_binding = "warn"
mod_module_files = "warn"
multiple_inherent_impl = "warn"
unnecessary_semicolon = "warn"
nonstandard_macro_braces = "warn"
unnecessary_self_imports = "warn"
range_minus_one = "warn"
range_plus_one = "warn"
zero_sized_map_values = "warn"
partial_pub_fields = "warn"
needless_raw_strings = "warn"
missing_assert_message = "warn"
ignored_unit_patterns = "warn"
explicit_iter_loop = "warn"
explicit_into_iter_loop = "warn"
assertions_on_result_states = "warn"
as_underscore = "warn"
as_pointer_underscore = "warn"
collapsible_else_if = "allow"

# perf
redundant_clone = "warn"
inefficient_to_string = "warn"
trivially_copy_pass_by_ref = "warn"
stable_sort_primitive = "warn"
format_push_string = "warn"
format_collect = "warn"
assigning_clones = "warn"

# complexity
cognitive_complexity = "warn"
decimal_literal_representation = "warn"

# safety
undocumented_unsafe_blocks = "warn"
multiple_unsafe_ops_per_block = "warn"

[profile.release]
lto = true
codegen-units = 1
