[package]
name = "air_main"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "The Main Library of the Air Programming Language"
repository = "https://github.com/LambdaAlpha/airlang_rs"
keywords = ["language", "solver", "specification", "formal", "logic"]
categories = ["compilers"]

[[test]]
name = "main"

[lints]
workspace = true

[dependencies.airlang]
path = "../lib"
version = "0.6.0"

[dependencies.airlang_ext]
path = "../ext"
version = "0.6.0"
