[package]
name = "air_main"
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "The Main Library of the Air Programming Language"
repository = "https://github.com/LambdaAlpha/airlang_rs"
keywords = ["abstraction", "optimizer", "specification", "solver", "reflect"]
categories = ["compilers"]

[[test]]
name = "main"

[lints]
workspace = true

[dependencies.airlang]
path = "../lib"
version = "0.16.0"

[dependencies.airlang_ext]
path = "../ext"
version = "0.16.0"

[dependencies.log]
version = "0.4"
default-features = false
features = ["release_max_level_off"]

[dev-dependencies.airlang_dev]
path = "../dev"
