[package]
name = "airlang_ext"
version = "0.22.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "The Extension of Air Programming Language"
repository = "https://github.com/LambdaAlpha/airlang_rs"
keywords = ["programming-language", "dsl", "config", "configuration", "serde"]
categories = ["compilers"]

[lints]
workspace = true

[dependencies.airlang]
path = "../lib"
version = "0.22.0"

[dependencies.log]
version = "0.4"
default-features = false
features = ["release_max_level_off"]

[dev-dependencies.airlang_dev]
path = "../dev"
