[package]
name = "airlang"
version = "0.16.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "The Air Programming Language"
repository = "https://github.com/LambdaAlpha/airlang_rs"
keywords = ["abstraction", "optimizer", "specification", "solver", "reflect"]
categories = ["compilers"]

[[bench]]
name = "main"
harness = false

[[test]]
name = "main"

[lints]
workspace = true

[dependencies]
rustc-hash = "2"
winnow = "0.7"
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
const_format = "0.2"

[dependencies.log]
version = "0.4"
default-features = false
features = ["release_max_level_off"]

[dependencies.string_cache]
version = "0.8"
default-features = false
features = []

[dependencies.rand]
version = "0.9"
default-features = false
features = ["small_rng", "alloc", "os_rng"]

[dependencies.derive_more]
version = "2"
default-features = false
features = [
    "std",
    "from",
    "try_from",
    "into",
    "try_into",
    "as_ref",
    "deref",
    "deref_mut",
    "is_variant",
    "unwrap",
    "try_unwrap",
    "constructor",
    "into_iterator",
    "debug",
    "display",
]

[dev-dependencies]
criterion = "0.6"

[dev-dependencies.airlang_dev]
path = "../dev"
