[package]
name = "airlang"
version = "0.23.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Air is a minimalist and universal programming language."
repository = "https://github.com/LambdaAlpha/airlang_rs"
keywords = ["programming-language", "dsl", "config", "configuration", "serde"]
categories = ["compilers"]

[[bench]]
name = "main"
harness = false

[[test]]
name = "main"

[lints]
workspace = true

[dependencies]
rustc-hash = "2"
winnow = "0.7"
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
const_format = "0.2"
# for once_map
stable_deref_trait = "1.2"
bigdecimal = "0.4"

[dependencies.string_cache]
version = "0.9"
default-features = false
features = []

[dependencies.rand]
version = "0.9"
default-features = false
features = ["small_rng", "alloc", "os_rng"]

[dependencies.derive_more]
version = "2"
default-features = false
features = [
    "std",
    "from",
    "try_from",
    "into",
    "try_into",
    "as_ref",
    "deref",
    "deref_mut",
    "is_variant",
    "unwrap",
    "try_unwrap",
    "constructor",
    "into_iterator",
    "debug",
    "display",
]

[dependencies.once_map]
version = "0.4"
default-features = false
features = ["std"]

[dev-dependencies]
criterion = "0.8"

[dev-dependencies.airlang_dev]
path = "../dev"

[dev-dependencies.log]
version = "0.4"
default-features = false
features = ["release_max_level_off"]
