[package]
name = "airlang"
version = "0.23.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Air is a minimalist and universal programming language."
repository = "https://github.com/LambdaAlpha/airlang_rs"
keywords = ["programming-language", "dsl", "config", "configuration", "serde"]
categories = ["compilers"]

[[bench]]
name = "main"
harness = false

[[test]]
name = "main"

[lints]
workspace = true

# faster hash map
[dependencies.rustc-hash]
version = "2"

# integer and decimal
[dependencies.num-traits]
version = "0.2"

# integer
[dependencies.num-bigint]
version = "0.4"

# integer
[dependencies.num-integer]
version = "0.1"

# decimal
[dependencies.bigdecimal]
version = "0.4"

# key
[dependencies.string_cache]
version = "0.9"
default-features = false
features = []

# syntax parsing
[dependencies.winnow]
version = "0.7"

# val generation
[dependencies.rand]
version = "0.10"
default-features = false
features = ["alloc"]

# const str
[dependencies.const_format]
version = "0.2"

# derive
[dependencies.derive_more]
version = "2"
default-features = false
features = [
    "std",
    "from",
    "try_from",
    "into",
    "try_into",
    "as_ref",
    "deref",
    "deref_mut",
    "is_variant",
    "unwrap",
    "try_unwrap",
    "constructor",
    "into_iterator",
    "debug",
    "display",
]

# bench
[dev-dependencies.criterion]
version = "0.8"

# log
[dev-dependencies.airlang_dev]
path = "../dev"

# log
[dev-dependencies.log]
version = "0.4"
default-features = false
features = ["release_max_level_off"]
